# in-toto

./: .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.bib  CODE-OF-CONDUCT.md  GOVERNANCE.md  LICENSE  MAINTAINERS.txt  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  appveyor.yml  archiso.layout  archiso.py  debian.layout  debian.py  demo.py  django.layout  django.py  dump.sh  gcc.layout  gcc.py  in_toto_sign.py  layout-creation.md  layout.py  layouts.ps  link.py  matchrules.py  metadata_encoder.py  optional-requirements.txt  pylintrc  pyproject.toml  requirements-build.txt  (+17 more)
.github/: dependabot.yml
.github/workflows/: _test.yml  cd.yml  ci.yml
Dockerfiles/: in-toto-verify.Dockerfile
concrete_example/: README.md
concrete_example/metadata/: build_kernel.link  build_modules.link  package.link  upstream.link
debian/: Dockerfile  README.source  changelog  control  copyright  rules  watch
debian/patches/: 01_use_python3_interpreter_in_tests.diff  02_fix_subprocess_stream_duplication.diff  02_use_python3_interpreter_in_dsse_layout.diff  series
debian/upstream/: metadata  signing-key.asc
demo/: README.md  run_demo.py
demo-opensuse/: Dockerfile  Offline-demo.md  README.md
demo-opensuse/owner_alice/: create_layout.py  create_layout_offline.py  verify-signature.sh
demo/final_product/: package.0c6c50a1.link  package.c1ae1e51.link  root.layout  untar.link  write-code.0c6c50a1.link
demo/functionary_bob/: bob.pub
demo/functionary_carl/: carl.pub
demo/owner_alice/: create_layout.py
doc/: Makefile  make.bat
doc/metadata/: README.md  git-tag.776a00e2.link  in-toto-sdist-signed.layout  in-toto-sdist-unsigned.layout  in_toto_sdist.layout
doc/metadata/layout for sdist and bdist/: create-sdist-bdist.776a00e2.link  git-tag.776a00e2.link  in-toto-sdist-bdist-signed.layout  in_toto-1.1.0-py3-none-any.whl  (+1 more)
doc/source/: api.rst  conf.py  configuration.rst  exclude-patterns.md  exclude_patterns.md  index.rst  installing.rst  layout-creation-example.md  model.rst  settings.rst
in_toto/: __init__.py  artifact_rules.py  common_args.py  exceptions.py  formats.py  gitlib.py  gpg.py  in_toto_check_materials.py  in_toto_keygen.py  in_toto_match_products.py  in_toto_mock.py  in_toto_record.py  in_toto_run.py  in_toto_sign.py  in_toto_verify.py  log.py  matchrule_validators.py  process.py  rulelib.py  runlib.py  settings.py  user_settings.py  util.py  verifylib.py
in_toto/gpg/: __init__.py  common.py  constants.py  dsa.py  exceptions.py  formats.py  functions.py  rsa.py  util.py
in_toto/models/: _signer.py  common.py  gpg.py  layout.py  link.py  metadata.py  mock_link.py  provenance.py  serialization.py  statement.py
in_toto/resolver/: __init__.py  _file_resolver.py  _resolver.py  file_resolver.py  resolver.py
in_toto/resolvers/: github.py
in_toto/ssl_commons/: exceptions.py  schema.py
old_examples/: debian.py  gcc.py  simple_layout.py  tails.py
roadmap-reviews/2020/: ROADMAP.md  first-quarter-update.md  review_1_august_19.md  review_2_december_19.md  review_3_june_20.md
roadmap-reviews/2021/: ROADMAP.md  review_1_december_20.md  review_2_april_21.md  review_3_july_21.md
spec_examples/: alices_script.py
test/: runtests.py  test_gpg.py  test_in_toto_keygen.py  test_in_toto_mock.py  test_in_toto_record.py  test_in_toto_run.py  test_in_toto_sign.py  test_in_toto_verify.py  test_runlib.py  test_toto_design.py  test_toto_verify.py  test_user_settings.py  test_util.py  test_verifylib.py
test/demo_fail/: package.link  write-code.link
test/demo_files/: .in_totorc  alice  alice.pub  bob  bob.pub  carl  carl.pub  demo.layout.template  package.2dc02526.link  package.2dc025263ba09a6a996cce10426033427cc84cc4c0b51459350ccb13a04b47bd.link  package.2f89b927.link  package.c1ae1e51.link  write-code.0c6c50a1.link  write-code.776a00e2.link  write-code.c8650e01.link
test/demo_files_gpg/: package.7b3abb26.link  write-code.8288ef56.link
test/demo_pass/: package.link  root-double-signed.layout  root.layout
test/models/: test_artifact_rules.py  test_common.py  test_inspection.py  test_layout.py  test_link.py  test_matchrule.py  test_step.py
test/rc_test/: .in_totorc
tests/: __init__.py  common.py  runtests.py  test_common_args.py  test_directory_resolver.py  test_gpg.py  test_in_toto_check_materials.py  test_in_toto_keygen.py  test_in_toto_match_products.py  test_in_toto_mock.py  test_in_toto_record.py  test_in_toto_run.py  test_in_toto_sign.py  test_in_toto_verify.py  test_log.py  test_ostree_resolver.py  test_param_substitution.py  test_process.py  test_resolver.py  test_rulelib.py  test_runlib.py  test_settings.py  test_user_settings.py  test_util.py  test_verifylib.py
tests/demo_dsse_files/: demo.layout.template  package.2f89b927.link  write-code.776a00e2.link
tests/demo_dsse_files_gpg/: demo.layout.template  package.7b3abb26.link  write-code.8288ef56.link
tests/demo_files/: danny  danny.pub  demo.layout.template
tests/demo_files_gpg/: demo.layout.template  package.7b3abb26.link  write-code.8288ef56.link
tests/models/: test_artifact_rules.py  test_common.py  test_envelope.py  test_gpg.py  test_inspection.py  test_layout.py  test_link.py  test_metadata.py  test_provenance.py  test_signer.py  test_statement.py  test_step.py  test_supply_chain_item.py
tests/pems/: ecdsa_private_encrypted.pem  ecdsa_public.pem  ed25519_private_encrypted.pem  ed25519_public.pem  rsa_private_encrypted.pem  rsa_public.pem
tests/rc_test/: .in_totorc
tests/resolver/: test_file_resolver.py  test_resolver.py
tests/scripts/: expr  tar  touch
tests/subdir/: foosub1  foosub2
toto/: exceptions.py  formats.py  in_toto_record.py  layoutlib.py  log.py  matchrule_validators.py  runlib.py  settings.py  toto-layout.py  toto-run.py  toto-verify.py  toto_layout.py  util.py  verifylib.py
toto/designlib/: __init__.py  history.py  util.py
toto/models/: common.py  layout.py  layouts.ps  link.py  matchrule.py  matchrules.py  validators.py
toto/ssl_commons/: exceptions.py  schema.py
(+86 files in other folders)
